Remove Permissions Text from account.html. Add price to each cart item and final price to cart.html. Add checkout page implementation. Remove add to Cart from stock = 0 items.

--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -13,6 +13,7 @@
           <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="product-img" />
         {% endif %}
 
+        <p>Price: ${{ item.product.price }}</p>
         <p>Quantity: {{ item.quantity }}</p>
 
         <form method="POST" action="{% url 'remove_from_cart' item.product.id %}">
@@ -22,6 +23,8 @@
       </div>
     {% endfor %}
   </div>
+
+  <h3>Total Price: ${{ total_price }}</h3>
 
   <form method="POST" action="{% url 'checkout' %}" class="checkout-form">
     {% csrf_token %}
